--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Sql) # sql 추가
 
 set(PROJECT_SOURCES
         main.cpp
@@ -54,7 +55,10 @@ else()
     endif()
 endif()
 
-target_link_libraries(pacman PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(pacman PRIVATE
+    Qt${QT_VERSION_MAJOR}::Widgets
+    Qt${QT_VERSION_MAJOR}::Sql # sql 추가
+)
 
 set_target_properties(pacman PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
